--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     margin: auto;
     overflow: hidden;
     background-size: cover;
+    margin-bottom: 100px;
 }
 #block{
     width: 50px;
@@ -53,6 +54,7 @@ body{
     100%{background-color: rgb(255, 0, 0);}
 }
 #h1{
+    margin-top: ;
     animation: cor 2s infinite;
     text-align: center;
 }
